# grainiac

./: .gitignore  .gitmodules  Cargo.toml  readme.md
.github/workflows/: build_and_deploy.yml  readme-linux.txt  readme-macos_aarch64.txt  readme-macos_x86_64.txt  readme-windows.txt
grainiac_au/: CMakeLists.txt
grainiac_core/: Cargo.toml
grainiac_core/src/: constants.rs  grain.rs  instance.rs  lib.rs  voice.rs
grainiac_core/tests/: integration_tests.rs
grainiac_plugin/: Cargo.toml  README.md  bundler.toml
grainiac_plugin/src/: editor.rs  lib.rs  utils.rs
grainiac_plugin/src/editor/: styles.css  waveform.rs
grainiac_plugin/src/editor/widgets/: dial.rs  mod.rs  select.rs  waveform.rs
grainiac_plugin_gui/: Cargo.toml
grainiac_plugin_gui/src/: editor.rs  lib.rs  main.rs
grainiac_plugin_gui/src/editor/: styles.css
grainiac_plugin_gui/src/editor/widgets/: dial.rs  dial_base.rs  select.rs  waveform.rs
grainiac_plugin_tui/: CLAUDE.md  Cargo.toml  README.md
grainiac_plugin_tui/src/: lib.rs  main.rs  ratavstui.rs  widgets.rs
grainiac_plugin_tui/src/widgets/: track_widget.rs
grainiac_plugin_tui/src/widgets/track_widget/: brailles.rs
grainiac_tui/: Cargo.toml  config.json  connect.sh
grainiac_tui/src/: main.rs  state.rs  track_widget.rs  ui.rs  widgets.rs
grainiac_tui/src/widgets/: fader_widget.rs  track_widget.rs
grainiac_tui/src/widgets/fader_widget/: brailles.rs
grainiac_tui/src/widgets/track_widget/: brailles.rs
midi_ctrl/lib/components/: components.h  instance.h
midi_ctrl/lib/pot/: components.h
midi_ctrl/src/: main.cpp
pi/: Cargo.toml
pi/src/: main.rs
plugin/: Cargo.toml  README.md
plugin/src/: editor.rs  lib.rs  main.rs
plugin/src/editor/: styles.css  waveform.rs
schematics/: _autosave-midi_controller.kicad_pcb  fp-info-cache  midi_controller.kicad_pcb  midi_controller.kicad_prl  midi_controller.kicad_pro  midi_controller.kicad_sch  midi_controller.kicad_sch-bak  midi_controller_copy.kicad_pcb  midi_controller_copy.kicad_prl  midi_controller_copy.kicad_pro  midi_controller_panel.kicad_pcb  midi_controller_panel.kicad_prl  midi_controller_panel.kicad_pro  ~_autosave-midi_controller.kicad_pcb.lck
schematics/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: editor.rs  lib.rs
src/editor/: waveform.rs
src/sampler/: grain.rs  mod.rs  voice.rs
standalone/: Cargo.toml  config.json
standalone/src/: main.rs  peak_meter_widget.rs  state.rs  ui.rs  waveform_widget.rs
standalone/src/waveform_widget/: brailles.rs
