[package]
name = "grainiac"
version = "0.1.0"
edition = "2021"
authors = ["Christian Grothe <christian.grothe@posteo.de>"]
license = "GPL-3.0-or-later"
homepage = "https://timerift.kryshe.com"
description = "A granular sampler instrument"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
crossbeam = "0.8.4"
grainiac_core = { path = "../grainiac_core"}
hound = "3.5.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs","standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rfd = "0.15.4"
ringbuf = "0.4.8"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
