[package]
name = "grainiac_plugin_tui"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0" }
crossbeam = "0.8.4"
grainiac_core = { path = "../grainiac_core" }
hound = "3.5.1"
keyboard-types = "0.6"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
  "assert_process_allocs",
  "standalone",
] }
ratatui = "0.30.0"
raw-window-handle = "0.5"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
soft_ratatui = "0.1.3"
softbuffer = "0.3.4"
