[package]
name = "grainiac"
version = "0.1.0"
edition = "2021"
authors = ["Christian Grothe <christian.grothe@posteo.de>"]
license = "GPL-3.0-or-later"
homepage = "https://timerift.kryshe.com"
description = "A granular sampler instrument"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
grainiac_core = { path = "../grainiac_core", features=["draw_data"]}
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs","standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rand = "0.8.5"
triple_buffer = "8.0.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
